# kedro-ml-engine-integrated

./: COMPLETE_SYSTEM_SUMMARY.md  Dockerfile  FINAL_VERIFICATION_CHECKLIST.sh  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  TESTING_REPORT.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  phase5_analysis.py  pyproject.toml  requirements.txt  setup.py
backup_working/: data_loading_unified.py  model_training.py
backup_working/feature_engineering/: feature_engineering_v2.py
conf/base/: catalog.yml  data_catalog.yml  logging.yml  parameters.yml  settings.yml
conf/examples/: parameters_adult.yml  parameters_telco.yml
conf/home_credit/: parameters.yml  schema.yml
conf/iris/: parameters.yml  schema.yml
conf/local/: catalog.yml  parameters.yml
conf/test/: parameters.yml
data/01_raw/: data.csv
docs/: 00_ARCHITECTURE_OVERVIEW.md  01_IMPLEMENTATION_SUMMARY.md  API.md  PHASE_1.md  SETUP.md
examples/: multi_table_example.yml  single_table_example.yml
src/ml_engine/: __init__.py  pipeline_registry.py  settings.py
src/ml_engine/hooks/: __init__.py
src/ml_engine/pipelines/: __init__.py  cross_validation_strategies.py  data_cleaning.py  data_loading.py  data_loading_multitable.py  data_loading_unified.py  data_validation.py  encoders.py  end_to_end.py  evaluation_metrics.py  feature_engineering.py  feature_selection.py  imputers.py  model_training.py  phase4_algorithms.py  phase6_ensemble.py  phase6_ensemble_pipeline.py  scalers.py  training_strategies.py
src/ml_engine/utils/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py  test_cross_validation_strategies.py  test_data_cleaning.py  test_data_loading.py  test_data_loading_unified.py  test_data_validation.py  test_evaluation_metrics.py  test_feature_engineering.py  test_feature_selection.py  test_hyperparameter_analysis.py  test_model_comparison.py  test_pipelines.py  test_report_generator.py  test_training_strategies.py  test_visualization_manager.py
(+10 files in other folders)
